glx/testdata/invalid/archive-duplicate-ids.glx
# Invalid: Contains duplicate entity IDs
persons:
  person-duplicate:
    concluded_identity:
      primary_name: "John Smith"
  
  person-duplicate:  # ERROR: Duplicate ID
    concluded_identity:
      primary_name: "Mary Brown"

places:
  place-duplicate:
    name: "Leeds"
  
  place-duplicate:  # ERROR: Duplicate ID
    name: "Yorkshire"

